tests/errors/reserved-name.futil
import "primitives/core.futil";
import "primitives/memories/comb.futil";
component main() -> () {
  cells {
    reg = std_reg(32);
  }
  wires {
  }
  control {
  }
}
